codegen/parser/promptdsl_parser.go
// Code generated from ./codegen/grammar/PromptDSLParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // PromptDSLParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PromptDSLParser struct {
	*antlr.BaseParser
}

var PromptDSLParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func promptdslparserParserInit() {
	staticData := &PromptDSLParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'string'", "'float'", "'int'", "'prompt'", "'params'", "'sys'",
		"'user'", "'note'", "'in'", "'output'", "'format'", "'type'", "'struct'",
		"'schema'", "'parse'", "'jsonfix'", "'markdown'", "'if'", "'else'",
		"'outputspec'", "'for'", "'range'", "'switch'", "'default'", "'case'",
		"'goimport'", "'runexe'", "'it'", "'it_ctx'", "'loopRange'", "", "",
		"", "", "'{'", "", "'('", "')'", "':'", "'='", "','", "'.'", "'=='",
		"'!='", "'@'", "'md'", "'json'", "'['", "']'", "'++'", "'--'", "'-'",
		"'*'", "'/'", "'%'", "'_'", "'+='", "'-='", "'*='", "'/='", "'%='",
		"':='", "'<'", "'<='", "'>'", "'>='", "", "", "", "", "'|'", "';'",
		"'+'",
	}
	staticData.SymbolicNames = []string{
		"", "STRING_TYPE", "FLOAT_TYPE", "INT_TYPE", "PROMPT", "PARAMS", "SYSTEM",
		"USER", "NOTE", "INPUT", "OUTPUT", "FORMAT", "TYPE", "STRUCT", "SCHEMA",
		"PARSE", "JSONFIX", "MARKDOWN", "IF", "ELSE", "OUTPUTSPEC", "FOR", "RANGE",
		"SWITCH", "DEFAULT", "CASE", "GOIMPORT", "RUNEXE", "IT", "IT_CTX", "LOOPRANGE",
		"BEFORE", "FIX", "AFTER", "ARRAY_OUTPUTSPEC", "LBRACE", "RBRACE", "LPAREN",
		"RPAREN", "COLON", "EQUAL", "COMMA", "DOT", "EQEQ", "NOTEQ", "AT", "MD",
		"JSON", "LBRACK", "RBRACK", "INCREMENT", "DECREMENT", "MINUS", "STAR",
		"SLASH", "MOD", "UNDERSCORE", "PLUSEQ", "MINUSEQ", "MULTEQ", "DIVEQ",
		"MODEQ", "DECL_ASSIGN", "LT", "LTE", "GT", "GTE", "ID", "STRING", "NUMBER",
		"BOOL", "PIPE", "SEMI", "PLUS", "DASH_STRING", "WS", "LINE_COMMENT",
		"BLOCK_COMMENT", "CODE_STRING_SINGLE", "CODE_STRING", "CODE_TEXT",
	}
	staticData.RuleNames = []string{
		"promptFile", "runexeDef", "promptDef", "promptBlock", "goimportSection",
		"goimportEntry", "inputSection", "iterater", "loopRangeSection", "outputSection",
		"outputStruct", "outputMarkdown", "beforeSection", "systemSection",
		"sysContent", "userSection", "userContent", "moduleDef", "moduleContent",
		"thencontent", "elsecontent", "forcontent", "ifStatement", "condition",
		"forStatement", "assignExpr", "updateExpr", "switchStatement", "switchCase",
		"switchDefault", "typeCase", "typeDefault", "typeName", "dslCallExpr",
		"expr", "fieldDef", "textLine", "paramPath", "structDef", "annotation",
		"annotationArgs", "annotationValue", "arrayLiteral", "defaultAnnotation",
		"fixSection", "afterSection", "codeBlockContent", "type", "value", "formatType",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PromptDSLParserInit initializes any static state used to implement PromptDSLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPromptDSLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func PromptDSLParserInit() {
	staticData := &PromptDSLParserParserStaticData
	staticData.once.Do(promptdslparserParserInit)
}

// NewPromptDSLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewPromptDSLParser(input antlr.TokenStream) *PromptDSLParser {
	PromptDSLParserInit()
	this := new(PromptDSLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &PromptDSLParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "PromptDSLParser.g4"

	return this
}

// PromptDSLParser tokens.
const (
	PromptDSLParserEOF                = antlr.TokenEOF
	PromptDSLParserSTRING_TYPE        = 1
	PromptDSLParserFLOAT_TYPE         = 2
	PromptDSLParserINT_TYPE           = 3
	PromptDSLParserPROMPT             = 4
	PromptDSLParserPARAMS             = 5
	PromptDSLParserSYSTEM             = 6
	PromptDSLParserUSER               = 7
	PromptDSLParserNOTE               = 8
	PromptDSLParserINPUT              = 9
	PromptDSLParserOUTPUT             = 10
	PromptDSLParserFORMAT             = 11
	PromptDSLParserTYPE               = 12
	PromptDSLParserSTRUCT             = 13
	PromptDSLParserSCHEMA             = 14
	PromptDSLParserPARSE              = 15
	PromptDSLParserJSONFIX            = 16
	PromptDSLParserMARKDOWN           = 17
	PromptDSLParserIF                 = 18
	PromptDSLParserELSE               = 19
	PromptDSLParserOUTPUTSPEC         = 20
	PromptDSLParserFOR                = 21
	PromptDSLParserRANGE              = 22
	PromptDSLParserSWITCH             = 23
	PromptDSLParserDEFAULT            = 24
	PromptDSLParserCASE               = 25
	PromptDSLParserGOIMPORT           = 26
	PromptDSLParserRUNEXE             = 27
	PromptDSLParserIT                 = 28
	PromptDSLParserIT_CTX             = 29
	PromptDSLParserLOOPRANGE          = 30
	PromptDSLParserBEFORE             = 31
	PromptDSLParserFIX                = 32
	PromptDSLParserAFTER              = 33
	PromptDSLParserARRAY_OUTPUTSPEC   = 34
	PromptDSLParserLBRACE             = 35
	PromptDSLParserRBRACE             = 36
	PromptDSLParserLPAREN             = 37
	PromptDSLParserRPAREN             = 38
	PromptDSLParserCOLON              = 39
	PromptDSLParserEQUAL              = 40
	PromptDSLParserCOMMA              = 41
	PromptDSLParserDOT                = 42
	PromptDSLParserEQEQ               = 43
	PromptDSLParserNOTEQ              = 44
	PromptDSLParserAT                 = 45
	PromptDSLParserMD                 = 46
	PromptDSLParserJSON               = 47
	PromptDSLParserLBRACK             = 48
	PromptDSLParserRBRACK             = 49
	PromptDSLParserINCREMENT          = 50
	PromptDSLParserDECREMENT          = 51
	PromptDSLParserMINUS              = 52
	PromptDSLParserSTAR               = 53
	PromptDSLParserSLASH              = 54
	PromptDSLParserMOD                = 55
	PromptDSLParserUNDERSCORE         = 56
	PromptDSLParserPLUSEQ             = 57
	PromptDSLParserMINUSEQ            = 58
	PromptDSLParserMULTEQ             = 59
	PromptDSLParserDIVEQ              = 60
	PromptDSLParserMODEQ              = 61
	PromptDSLParserDECL_ASSIGN        = 62
	PromptDSLParserLT                 = 63
	PromptDSLParserLTE                = 64
	PromptDSLParserGT                 = 65
	PromptDSLParserGTE                = 66
	PromptDSLParserID                 = 67
	PromptDSLParserSTRING             = 68
	PromptDSLParserNUMBER             = 69
	PromptDSLParserBOOL               = 70
	PromptDSLParserPIPE               = 71
	PromptDSLParserSEMI               = 72
	PromptDSLParserPLUS               = 73
	PromptDSLParserDASH_STRING        = 74
	PromptDSLParserWS                 = 75
	PromptDSLParserLINE_COMMENT       = 76
	PromptDSLParserBLOCK_COMMENT      = 77
	PromptDSLParserCODE_STRING_SINGLE = 78
	PromptDSLParserCODE_STRING        = 79
	PromptDSLParserCODE_TEXT          = 80
)

// PromptDSLParser rules.
const (
	PromptDSLParserRULE_promptFile        = 0
	PromptDSLParserRULE_runexeDef         = 1
	PromptDSLParserRULE_promptDef         = 2
	PromptDSLParserRULE_promptBlock       = 3
	PromptDSLParserRULE_goimportSection   = 4
	PromptDSLParserRULE_goimportEntry     = 5
	PromptDSLParserRULE_inputSection      = 6
	PromptDSLParserRULE_iterater          = 7
	PromptDSLParserRULE_loopRangeSection  = 8
	PromptDSLParserRULE_outputSection     = 9
	PromptDSLParserRULE_outputStruct      = 10
	PromptDSLParserRULE_outputMarkdown    = 11
	PromptDSLParserRULE_beforeSection     = 12
	PromptDSLParserRULE_systemSection     = 13
	PromptDSLParserRULE_sysContent        = 14
	PromptDSLParserRULE_userSection       = 15
	PromptDSLParserRULE_userContent       = 16
	PromptDSLParserRULE_moduleDef         = 17
	PromptDSLParserRULE_moduleContent     = 18
	PromptDSLParserRULE_thencontent       = 19
	PromptDSLParserRULE_elsecontent       = 20
	PromptDSLParserRULE_forcontent        = 21
	PromptDSLParserRULE_ifStatement       = 22
	PromptDSLParserRULE_condition         = 23
	PromptDSLParserRULE_forStatement      = 24
	PromptDSLParserRULE_assignExpr        = 25
	PromptDSLParserRULE_updateExpr        = 26
	PromptDSLParserRULE_switchStatement   = 27
	PromptDSLParserRULE_switchCase        = 28
	PromptDSLParserRULE_switchDefault     = 29
	PromptDSLParserRULE_typeCase          = 30
	PromptDSLParserRULE_typeDefault       = 31
	PromptDSLParserRULE_typeName          = 32
	PromptDSLParserRULE_dslCallExpr       = 33
	PromptDSLParserRULE_expr              = 34
	PromptDSLParserRULE_fieldDef          = 35
	PromptDSLParserRULE_textLine          = 36
	PromptDSLParserRULE_paramPath         = 37
	PromptDSLParserRULE_structDef         = 38
	PromptDSLParserRULE_annotation        = 39
	PromptDSLParserRULE_annotationArgs    = 40
	PromptDSLParserRULE_annotationValue   = 41
	PromptDSLParserRULE_arrayLiteral      = 42
	PromptDSLParserRULE_defaultAnnotation = 43
	PromptDSLParserRULE_fixSection        = 44
	PromptDSLParserRULE_afterSection      = 45
	PromptDSLParserRULE_codeBlockContent  = 46
	PromptDSLParserRULE_type              = 47
	PromptDSLParserRULE_value             = 48
	PromptDSLParserRULE_formatType        = 49
)

// IPromptFileContext is an interface to support dynamic dispatch.
type IPromptFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllRunexeDef() []IRunexeDefContext
	RunexeDef(i int) IRunexeDefContext
	AllPromptDef() []IPromptDefContext
	PromptDef(i int) IPromptDefContext

	// IsPromptFileContext differentiates from other interfaces.
	IsPromptFileContext()
}

type PromptFileContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPromptFileContext() *PromptFileContext {
	var p = new(PromptFileContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PromptDSLParserRULE_promptFile
	return p
}

func InitEmptyPromptFileContext(p *PromptFileContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PromptDSLParserRULE_promptFile
}

func (*PromptFileContext) IsPromptFileContext() {}

func NewPromptFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PromptFileContext {
	var p = new(PromptFileContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PromptDSLParserRULE_promptFile

	return p
}

func (s *PromptFileContext) GetParser() antlr.Parser { return s.parser }

func (s *PromptFileContext) EOF() antlr.TerminalNode {
	return s.GetToken(PromptDSLParserEOF, 0)
}

func (s *PromptFileContext) AllRunexeDef() []IRunexeDefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRunexeDefContext); ok {
			len++
		}
	}

	tst := make([]IRunexeDefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRunexeDefContext); ok {
			tst[i] = t.(IRunexeDefContext)
			i++
		}
	}

	return tst
}

func (s *PromptFileContext) RunexeDef(i int) IRunexeDefContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRunexeDefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRunexeDefContext)
}

func (s *PromptFileContext) AllPromptDef() []IPromptDefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPromptDefContext); ok {
			len++
		}
	}

	tst := make([]IPromptDefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPromptDefContext); ok {
			tst[i] = t.(IPromptDefContext)
			i++
		}
	}

	return tst
}

func (s *PromptFileContext) PromptDef(i int) IPromptDefContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPromptDefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPromptDefContext)
}

func (s *PromptFileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PromptFileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PromptFileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PromptDSLParserListener); ok {
		listenerT.EnterPromptFile(s)
	}
}

func (s *PromptFileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PromptDSLParserListener); ok {
		listenerT.ExitPromptFile(s)
	}
}

func (p *PromptDSLParser) PromptFile() (localctx IPromptFileContext) {
	localctx = NewPromptFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PromptDSLParserRULE_promptFile)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(103)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == PromptDSLParserRUNEXE {
		{
			p.SetState(100)
			p.RunexeDef()
		}

		p.SetState(105)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(107)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == PromptDSLParserPROMPT {
		{
			p.SetState(106)
			p.PromptDef()
		}

		p.SetState(109)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(111)
		p.Match(PromptDSLParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IRunexeDefContext is an interface to support dynamic dispatch.
type IRunexeDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	RUNEXE() antlr.TerminalNode
	COLON() antlr.TerminalNode
	STRING() antlr.TerminalNode

	// IsRunexeDefContext differentiates from other interfaces.
	IsRunexeDefContext()
}

type RunexeDefContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRunexeDefContext() *RunexeDefContext {
	var p = new(RunexeDefContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PromptDSLParserRULE_runexeDef
	return p
}

func InitEmptyRunexeDefContext(p *RunexeDefContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PromptDSLParserRULE_runexeDef
}

func (*RunexeDefContext) IsRunexeDefContext() {}

func NewRunexeDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RunexeDefContext {
	var p = new(RunexeDefContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PromptDSLParserRULE_runexeDef

	return p
}

func (s *RunexeDefContext) GetParser() antlr.Parser { return s.parser }

func (s *RunexeDefContext) RUNEXE() antlr.TerminalNode {
	return s.GetToken(PromptDSLParserRUNEXE, 0)
}

func (s *RunexeDefContext) COLON() antlr.TerminalNode {
	return s.GetToken(PromptDSLParserCOLON, 0)
}

func (s *RunexeDefContext) STRING() antlr.TerminalNode {
	return s.GetToken(PromptDSLParserSTRING, 0)
}

func (s *RunexeDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RunexeDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RunexeDefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PromptDSLParserListener); ok {
		listenerT.EnterRunexeDef(s)
	}
}

func (s *RunexeDefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PromptDSLParserListener); ok {
		listenerT.ExitRunexeDef(s)
	}
}

func (p *PromptDSLParser) RunexeDef() (localctx IRunexeDefContext) {
	localctx = NewRunexeDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PromptDSLParserRULE_runexeDef)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(113)
		p.Match(PromptDSLParserRUNEXE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(114)
		p.Match(PromptDSLParserCOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(115)
		p.Match(PromptDSLParserSTRING)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPromptDefContext is an interface to support dynamic dispatch.
type IPromptDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PROMPT() antlr.TerminalNode
	ID() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	AllPromptBlock() []IPromptBlockContext
	PromptBlock(i int) IPromptBlockContext

	// IsPromptDefContext differentiates from other interfaces.
	IsPromptDefContext()
}

type PromptDefContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPromptDefContext() *PromptDefContext {
	var p = new(PromptDefContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PromptDSLParserRULE_promptDef
	return p
}

func InitEmptyPromptDefContext(p *PromptDefContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PromptDSLParserRULE_promptDef
}

func (*PromptDefContext) IsPromptDefContext() {}

func NewPromptDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PromptDefContext {
	var p = new(PromptDefContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PromptDSLParserRULE_promptDef

	return p
}

func (s *PromptDefContext) GetParser() antlr.Parser { return s.parser }

func (s *PromptDefContext) PROMPT() antlr.TerminalNode {
	return s.GetToken(PromptDSLParserPROMPT, 0)
}

func (s *PromptDefContext) ID() antlr.TerminalNode {
	return s.GetToken(PromptDSLParserID, 0)
}

func (s *PromptDefContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(PromptDSLParserLBRACE, 0)
}

func (s *PromptDefContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(PromptDSLParserRBRACE, 0)
}

func (s *PromptDefContext) AllPromptBlock() []IPromptBlockContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPromptBlockContext); ok {
			len++
		}
	}

	tst := make([]IPromptBlockContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPromptBlockContext); ok {
			tst[i] = t.(IPromptBlockContext)
			i++
		}
	}

	return tst
}

func (s *PromptDefContext) PromptBlock(i int) IPromptBlockContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPromptBlockContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPromptBlockContext)
}

func (s *PromptDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PromptDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PromptDefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PromptDSLParserListener); ok {
		listenerT.EnterPromptDef(s)
	}
}

func (s *PromptDefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PromptDSLParserListener); ok {
		listenerT.ExitPromptDef(s)
	}
}

func (p *PromptDSLParser) PromptDef() (localctx IPromptDefContext) {
	localctx = NewPromptDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PromptDSLParserRULE_promptDef)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(117)
		p.Match(PromptDSLParserPROMPT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(118)
		p.Match(PromptDSLParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(119)
		p.Match(PromptDSLParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(121)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64((_la-6)) & ^0x3f) == 0 && ((int64(1)<<(_la-6))&2305843559230603291) != 0) {
		{
			p.SetState(120)
			p.PromptBlock()
		}

		p.SetState(123)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(125)
		p.Match(PromptDSLParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPromptBlockContext is an interface to support dynamic dispatch.
type IPromptBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	InputSection() IInputSectionContext
	Iterater() IIteraterContext
	LoopRangeSection() ILoopRangeSectionContext
	OutputSection() IOutputSectionContext
	BeforeSection() IBeforeSectionContext
	SystemSection() ISystemSectionContext
	UserSection() IUserSectionContext
	AfterSection() IAfterSectionContext
	FixSection() IFixSectionContext
	ModuleDef() IModuleDefContext
	GoimportSection() IGoimportSectionContext

	// IsPromptBlockContext differentiates from other interfaces.
	IsPromptBlockContext()
}

type PromptBlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPromptBlockContext() *PromptBlockContext {
	var p = new(PromptBlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PromptDSLParserRULE_promptBlock
	return p
}

func InitEmptyPromptBlockContext(p *PromptBlockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PromptDSLParserRULE_promptBlock
}

func (*PromptBlockContext) IsPromptBlockContext() {}
